@@ -1,3 +1,10 @@
+TAG: pdfdownload-6-0-18-2
+DATE: 2/08/2022
+STAFF: jak
+CHANGES: Revamped noPDF file/email generation to include num weeks left
+        on the report & number of download failures
+WTS2-771
+
 TAG: pdfdownload-6-0-18-1
 DATE: 1/28/2022
 STAFF: jak
